--- a/_config.yml
+++ b/_config.yml
@@ -2,15 +2,14 @@
 title: William O'Hearn
 subtitle: 
 email: w.ohearn2@exeter.ac.uk
-description: A Global Collaboration Of Macaque Researchers
+description: A Personal Researcher Website
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "https://willotree23.github.io/williamohearn.github.io/" # the base hostname & protocol for your site
 author: williamohearn
 lang: en_US
 
 # Social settings
-github_url: https://github.com/MacaqueNet
-slack_url: https://join.slack.com/t/macaquenet/shared_invite/zt-17eioou5f-yIj4BS~wfz~OUo9mCDFdjA
+github_url: https://willotree23.github.io/williamohearn.github.io
 
 # Build settings
 markdown: kramdown
