--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: William O'Hearn
 subtitle: 
 email: w.ohearn2@exeter.ac.uk
-description: A Personal Researcher Website
+description: Behavioral Ecologist
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "https://willotree23.github.io/williamohearn.github.io/" # the base hostname & protocol for your site
 author: williamohearn
